--- a/packages.yaml
+++ b/packages.yaml
@@ -27,3 +27,8 @@
   appcode: "7zip"
   description: "Open-Source File Archiver"
   icon: "7zip.png"
+
+- name: "Notepad++"
+  appcode: "notepadplusplus"
+  description: "Free Text Editor"
+  icon: "notepadplusplus.png"
