--- a/packages.yaml
+++ b/packages.yaml
@@ -28,7 +28,7 @@
   description: "Open-Source File Archiver"
   icon: "7zip.png"
 
-- name: "Notepad++"
+- name: "Notepad Plus Plus"
   appcode: "notepadplusplus"
   description: "Free Text Editor"
   icon: "notepadplusplus.png"
