--- a/packages.yaml
+++ b/packages.yaml
@@ -1,34 +1,41 @@
 - name: "Visual Studio Code"
   appcode: "vscode"
   description: "Code editing. Redefined."
+  category: "Development"
   icon: "vscode.png"
 
 - name: "Slack"
   appcode: "slack"
   description: "Communication for teams."
+  category: "Communications"
   icon: "slack.png"
 
 - name: "Google Chrome"
   appcode: "chrome"
   description: "Web Browser"
+  category: "Web Browsers"
   icon: "chrome.png"
 
 - name: "Microsoft Edge"
   appcode: "edge"
   description: "Web Browser"
+  category: "Web Browsers"
   icon: "edge.png"
 
 - name: "Mozilla Firefox"
   appcode: "firefox"
   description: "Web Browser"
+  category: "Web Browsers"
   icon: "firefox.png"
 
 - name: "7-Zip"
   appcode: "7zip"
   description: "Open-Source File Archiver"
+  category: "Utilities"
   icon: "7zip.png"
 
 - name: "Notepad++"
   appcode: "notepadplusplus"
   description: "Free Text Editor"
+  category: "Productivity"
   icon: "notepadplusplus.png"
